# Project1

./: .env.example  .flake8  README.md  mailing  pyproject.toml  requirements.txt
attempt/: apps.py  models.py  urls.py  views.py
attempt/migrations/: 0001_initial.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_options.py  0004_alter_client_full_name.py
config/: settings.py  urls.py  views.py
mail_messages/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
mail_messages/migrations/: 0001_initial.py  0002_initial.py  0003_alter_message_options.py
mailing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_client_owner_mailing_owner.py  0003_userprofile.py  0004_mailing_is_active.py
mailings/: forms.py  models.py  services.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailing_options.py  0004_alter_mailing_end_date_time_and_more.py
mailings/templates/: send_mailing.html
templates/attempt/: mailinglog_list.html
templates/clients/: client_detail.html  client_list.html
templates/mailings/: mailing_create.html  mailing_delete.html  mailing_detail.html  mailing_list.html  mailing_update.html  message_create.html  message_delete.html  message_detail.html  message_list.html  message_update.html
users/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  (+6 more)
(+56 files in other folders)
